Fixed wrong directory structure

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,7 @@ classifiers =
 
 [options]
 package_dir =
-    = phitigra
+    = src
 packages = find:
 python_requires = >=3.6
 install_requires =
