Updated links following the move to github

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,13 +2,13 @@
 name = phitigra
 version = 0.2.3
 author = Jean-Florent Raymond
-author_email = "j-florent.raymond@uca.fr"
+author_email = j-florent.raymond@uca.fr
 description = A graph editor for SageMath/Jupyter
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://gitlab.limos.fr/jfraymon/phitigra
+url = https://github.com/jfraymond/phitigra
 project_urls =
-    Bug Tracker = https://gitlab.limos.fr/jfraymon/phitigra/-/issues
+    Bug Tracker = https://github.com/jfraymond/phitigra/issues
 classifiers =
     Development Status :: 4 - Beta
     Intended Audience :: Science/Research
